# cs2XX-ComputerArchitecture

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: sphinx-build.yml
site/: conf.py  index.rst
site/_static/css/: custom.css
site/assignments/: faq.rst
site/assignments/assignment-1/: assignment-1.rst
site/assignments/hello-world/: hello-world.rst
site/getting-set/: getting-set.rst
site/labs/digital/: digital.rst
site/labs/gates/: basic-gates.rst
site/labs/hello-world/: hello-world.rst
site/outline/: outline.rst
site/topics/alu/: alu.rst  esap-alu.dig  esap-alu.rst
site/topics/arithmetic/: adder.rst  full_adder.dig  full_adder_4_bit.dig  half_adder.dig  half_adder_with_pla.dig
site/topics/control-logic/: control_logic_patterns_for_look_up_table.hex  create_control_logic_patterns_for_look_up_table.py  instruction_register.dig  instruction_register_and_control_logic.dig  instructions-microcodes.rst
site/topics/intro/: introduction.rst
site/topics/introduction/: introduction.rst
site/topics/layout/: bus.rst  ram_register.dig
site/topics/logic/: 1-2_and_2-4_decoders.dig  2_and_4_multiplexer.dig  boolean-logic.rst  combinational-logic.rst  combinatorial-logic.rst  conditionals.rst  functional_completeness.dig  logic-engine.rst  programmable_logic_array.dig  sequential-logic.rst  truth-tables.rst
site/topics/memory/: 1_bit_register.dig  4x4_ram.dig  8_bit_register.dig  D_flip_flop.dig  D_latch.dig  D_latch_with_enable.dig  SR_latch.dig  SR_latch_with_enable.dig  memory.rst  (+6 more)
(+31 files in other folders)
