[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "cs2XX-ComputerArchitecture"
dynamic = ["version"]
authors = [
  { name="J Hughes", email="jhughes@stfx.ca" },
]
description = "ComputerArchitecture Course"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "sphinx==7.3.7",
    "sphinx-rtd-theme==1.3.0",
]

