[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-git-versioning<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "cs2XX-ComputerArchitecture"
dynamic = ["version"]
authors = [
  { name="J Hughes", email="jhughes@stfx.ca" },
]
description = "ComputerArchitecture Course"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.2",
]

